[tool.poetry]
name = "piDASH"
version = "0.1.0"
description = ""
authors = ["Connor Sahleen <Connor.Sahleen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.4.4"
typer = "^0.4.2"
psutil = "^5.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
